Added db support for the player

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@citizenfx/client": "latest",
     "@citizenfx/server": "latest",
     "@types/node": "^20.11.5",
+    "@types/uuid": "^9.0.8",
     "esbuild": "^0.19.11",
     "prettier": "^3.2.4",
     "typescript": "^5.3.3"
@@ -28,10 +29,10 @@
   "dependencies": {
     "@nativewrappers/client": "latest",
     "@nativewrappers/fivem-server": "latest",
-    "@overextended/ox_lib": "latest"
+    "@overextended/ox_lib": "latest",
+    "uuid": "^8.0.0"
   },
   "engines": {
     "node": ">=16.9.1"
   }
 }
-
